@@ -6,11 +6,17 @@ Problem:
   No starting point.
   Infinity value (for all functions): inf
 ---
-Problem:
-  a * d * (a + b + c) + d (not derivable)
-  Argument's bounds: (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf)
-  Argument's scales: 1, 1, 1, 1
-  No constraints.
-  No starting point.
-  Infinity value (for all functions): inf
+Solver:
+  Problem:
+    a * d * (a + b + c) + d (not derivable)
+    Argument's bounds: (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf)
+    Argument's scales: 1, 1, 1, 1
+    No constraints.
+    No starting point.
+    Infinity value (for all functions): inf
+  Parameters:
+    dummy-parameter (dummy parameter): 42
+    dummy-parameter2 (yet another dummy parameter): 3
+    dummy-parameter3 (just a dummy key): ...and a dummy value!
+    
 The dummy solver always fail.
