@@ -20,20 +20,26 @@ Problem:
   Starting value: [1](0)
   Infinity value (for all functions): inf
 ---
-Problem:
-  a * d * (a + b + c) + d (not derivable)
-  Argument's bounds: (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf)
-  Argument's scales: 1, 1, 1, 1
-  Number of constraints: 1
-  Constraint 0
-      a * d * (a + b + c) + d (not derivable)
-      Bounds: (0, 5)
-      Scales: 3.5
-      Initial value: [1](0)
-      
-  Starting point: [4](0,0,0,0)
-  Starting value: [1](0)
-  Infinity value (for all functions): inf
+Solver:
+  Problem:
+    a * d * (a + b + c) + d (not derivable)
+    Argument's bounds: (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf)
+    Argument's scales: 1, 1, 1, 1
+    Number of constraints: 1
+    Constraint 0
+        a * d * (a + b + c) + d (not derivable)
+        Bounds: (0, 5)
+        Scales: 3.5
+        Initial value: [1](0)
+        
+    Starting point: [4](0,0,0,0)
+    Starting value: [1](0)
+    Infinity value (for all functions): inf
+  Parameters:
+    dummy-parameter (dummy parameter): 42
+    dummy-parameter2 (yet another dummy parameter): 3
+    dummy-parameter3 (just a dummy key): ...and a dummy value!
+    
 The dummy solver always fail.
 Discrete point: 2.3 (cnt: 1)
 Discrete point: 2.8 (cnt: 2)
